--- a/LandigPage/index.html
+++ b/LandigPage/index.html
@@ -4,56 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landin Page</title>
+    <title>Landing Page</title>
     <!-- referencia de los estilos css -->
-
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <!--aquì inicia la barra de naveggaciòn -->
-    <nav class="navbar navbar-expand-lg color nav-color">
+    <!-- aqui inicia la barra de navegacion -->
+    <nav class="navbar navbar-expand-lg nav-color ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Empresa</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
-              </li>
-            
-              <li class="nav-item dropdown bueno">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Servicios
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Mantenimiento</a></li>
-                  <li><a class="dropdown-item" href="#">Soporte</a></li>
-                  <li><a class="dropdown-item" href="#">Desarrollo web</a></li>
+            <a class="navbar-brand" href="#">Empresa</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
+
+                    <li class="nav-item dropdown color_dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Servicios
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Mantenimiento</a></li>
+                            <li><a class="dropdown-item" href="#">Soporte</a></li>
+                            <li><a class="dropdown-item" href="#">Desarrollo</a></li>
+                        </ul>
+                    </li>
                 </ul>
-              </li>
-            </ul>
-          </div>
+            </div>
         </div>
-      </nav>
- <!-- aquì finaliza la barra de navegaciòn -->
+    </nav>
+    <!-- aqui finaliza la barra de navegacion -->
 
-<!-- aquì empieza la sesion de inicio -->
-
-    <section class="sesion-inicio">
-        <div></div>
+    <!-- aqui empieza sesion de inicio -->
+    <section class="section-inicio">
+        <div class="Container-inicio">
+            <h1>Contacta <span class="servicios-inicio">Nuestros servicios</span> </h1>
+            <h6>Tenemos respuesta las 24 horas ala semana</h6>
+            <a class="btn-inicio">Iniciar</a>
+        </div>
         <div></div>
     </section>
- <!-- aquì termina la sesion de inicio -->
 
 
-<script src="./js/bootstrap.bundle.min.js"></script>
+
+
+    <!-- aqui termina sesion de inicio -->
+
+
+
+
+
+
+
+
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
